--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#/">nextStep</a>
+                        <a class="navbar-brand" href="#/">Angular Play Ground</a>
                     </div>
                     <div class="collapse navbar-collapse" id="js-navbar-collapse">
                         <ul class="nav navbar-nav">
